--- a/Microservices.Demo.Client.Web.ApiGateway/application.yml
+++ b/Microservices.Demo.Client.Web.ApiGateway/application.yml
@@ -9,6 +9,32 @@ WebApiGatewaySettings:
         - https://localhost:44300
         - https://localhost:44398
 Routes: 
+     -    
+        DownstreamPathTemplate: /api/Users
+        DownstreamScheme: http
+        UpstreamPathTemplate: /api/Users
+        ServiceName: Microservices.Demo.Auth.API2
+        UpstreamHttpMethod: 
+            - Get
+        FileCacheOptions: 
+            TtlSeconds: 15
+        AuthenticationOptions:
+            AuthenticationProviderKey: ApiSecurityAuthenticationScheme
+#            AllowedScopes:
+#                -
+        RouteClaimsRequirement:
+            userType: SALESMAN      
+        DangerousAcceptAnyServerCertificateValidator: true
+    -
+        DownstreamPathTemplate: /api/Users
+        DownstreamScheme: http
+        UpstreamPathTemplate: /api/Users
+        ServiceName: Microservices.Demo.Auth.API2
+        UpstreamHttpMethod:
+            - Post
+        FileCacheOptions: 
+            TtlSeconds: 15        
+        DangerousAcceptAnyServerCertificateValidator: true
     -    
         DownstreamPathTemplate: /api/Users
         DownstreamScheme: http
