--- a/Microservices.Demo.Client.Web.ApiGateway/application.yml
+++ b/Microservices.Demo.Client.Web.ApiGateway/application.yml
@@ -127,11 +127,27 @@ Routes:
         RouteClaimsRequirement: 
             userType: SALESMAN   
         DangerousAcceptAnyServerCertificateValidator: true
--    
+    -    
         DownstreamPathTemplate: /api/Policies
         DownstreamScheme: http
         UpstreamPathTemplate: /api/Policies
         ServiceName: Microservices.Demo.Policy.API
+        UpstreamHttpMethod: 
+            - Get
+        FileCacheOptions: 
+            TtlSeconds: 15
+        AuthenticationOptions:
+            AuthenticationProviderKey: ApiSecurityAuthenticationScheme
+#            AllowedScopes:
+#                -
+        RouteClaimsRequirement:
+            userType: SALESMAN      
+        DangerousAcceptAnyServerCertificateValidator: true
+    -
+        DownstreamPathTemplate: /api/Report
+        DownstreamScheme: http
+        UpstreamPathTemplate: /api/Report
+        ServiceName: Microservices.Demo.Report.API
         UpstreamHttpMethod: 
             - Get
         FileCacheOptions: 
